--- a/gradle.properties
+++ b/gradle.properties
@@ -38,7 +38,7 @@ google_play_services_location_version = 18.0.0
 retrofit_version = 2.9.0
 retrofit_gson_version = 2.9.0
 glide_version = 4.3.1
-
+rxjava2_version = 2.1.1
 ##################################################################################
 # Testing dependencies version
 ##################################################################################
