--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,8 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout:$constraint_layout_version"
     implementation "com.google.android.gms:play-services-location:$google_play_services_location_version"
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "io.reactivex.rxjava2:rxandroid:$rxjava2_version"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_gson_version"
     implementation "com.github.bumptech.glide:glide:$glide_version"
     testImplementation 'junit:junit:4.13.2'
