Adding test and general corrections

--- a/gradle.properties
+++ b/gradle.properties
@@ -39,6 +39,9 @@ retrofit_version = 2.9.0
 retrofit_gson_version = 2.9.0
 glide_version = 4.3.1
 rxjava2_version = 2.1.1
+
 ##################################################################################
 # Testing dependencies version
 ##################################################################################
+mockito_version = 3.3.0
+junit_version = 4.13.2
